# rust-graphql-actix-juniper-diesel-example

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  docker-compose.yaml
.github/workflows/: ci.yml  security-audit.yml
migrations/2020-03-28-185431_create_thermostat_status/: down.sql  up.sql
src/: db.rs  lib.rs  main.rs  schema.rs  schema_graphql.rs
src/handlers/: graphql.rs  mod.rs
src/models/: errors.rs  key.rs  mod.rs  thermostat_status.rs
tests/: test_key.rs  test_set_thermostat_status.rs  test_thermostat_status.rs  test_thermostat_status_history.rs
tests/common/: app.rs  helpers.rs  mod.rs
