[package]
name = "rust-graphql-actix-juniper-diesel-example"
version = "0.2.0"
authors = ["Mihai Dinculescu <mihai.dinculescu@outlook.com>"]
edition = "2018"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
# misc
futures = "0.3.8"
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"] }

# web server
actix-web = "3.3.2"
actix-rt = "1.1.1"
actix-cors = "0.5.3"
env_logger = "0.8.2"

# database
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"

# graphql
juniper = "0.15.1"
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.60"

[dev-dependencies]
actix-http = "2.2.0"
serial_test = "*"
